@@ -58,6 +58,7 @@
 <a href="http://jaeger.festing.org/rss.cgi?a8920c64cbb6c0da058580d40ac85cff">RSS feed</a>
 </div>
 <div class="printfooter">
+<hr noshade>
 Downloaded ---date--- from ---url---
 </div>
 
